--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "postbuild": "cp dist/index.html dist/404.html",
+    "postbuild:win": "node -e \"require('fs').copyFileSync('dist/index.html','dist/404.html')\""
   },
   "keywords": [],
   "author": "",
