ci: GitHub Actions deploy to Pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "moduleResolution": "Bundler",
     "skipLibCheck": true,
     "strict": true,
-    "baseUrl": "./src",
-    "paths": { "@/*": ["*"] },
+    "baseUrl": "./",
+    "paths": { "@/*": ["src/*"] },
     "types": ["vite/client",  "vitest/globals", "node"]
   },
   "include": ["src"]
