--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -22,13 +22,14 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         with:
-          version: 9
+          run_install: false
 
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'pnpm'
-
+          
+      - run: pnpm --version
       - run: pnpm install --frozen-lockfile
       - run: pnpm build
       - run: cp dist/index.html dist/404.html
